Ultimos ajustes EV2

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Ignorar el entorno virtual con otro nombre
+.json/
+# Ignorar el entorno virtual con otro nombre
 env/
 # Ignorar el entorno virtual
 venv/
